[package]

name = "topological-sort"
version = "0.0.4"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/topological-sort-rs"
description = "Performs topological sorting."
documentation = "https://gifnksm.github.io/topological-sort-rs"
