[package]

name = "topological-sort"
version = "0.0.6"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/topological-sort-rs"
description = "Performs topological sorting."
documentation = "https://gifnksm.github.io/topological-sort-rs"
