[package]

name = "topological-sort"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gifnksm/topological-sort-rs"
description = "Performs topological sorting."
documentation = "https://docs.rs/topological-sort/~0.0"

[dev-dependencies]
quickcheck_macros = "0.9"
quickcheck = "0.9"

